--- a/XdmUC104/UC104View/public_html/WEB-INF/web.xml
+++ b/XdmUC104/UC104View/public_html/WEB-INF/web.xml
@@ -64,12 +64,12 @@
     <filter-class>org.apache.myfaces.trinidad.webapp.TrinidadFilter</filter-class>
   </filter>
   <filter>
-    <filter-name>ServletADFFilter</filter-name>
-    <filter-class>oracle.adf.share.http.ServletADFFilter</filter-class>
-  </filter>
-  <filter>
     <filter-name>ADFLibraryFilter</filter-name>
     <filter-class>oracle.adf.library.webapp.LibraryFilter</filter-class>
+  </filter>
+  <filter>
+    <filter-name>adfBindings</filter-name>
+    <filter-class>oracle.adf.model.servlet.ADFBindingFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>trinidad</filter-name>
@@ -79,14 +79,14 @@
     <dispatcher>ERROR</dispatcher>
   </filter-mapping>
   <filter-mapping>
-    <filter-name>ServletADFFilter</filter-name>
-    <servlet-name>Faces Servlet</servlet-name>
+    <filter-name>ADFLibraryFilter</filter-name>
+    <url-pattern>/*</url-pattern>
     <dispatcher>FORWARD</dispatcher>
     <dispatcher>REQUEST</dispatcher>
   </filter-mapping>
   <filter-mapping>
-    <filter-name>ADFLibraryFilter</filter-name>
-    <url-pattern>/*</url-pattern>
+    <filter-name>adfBindings</filter-name>
+    <servlet-name>Faces Servlet</servlet-name>
     <dispatcher>FORWARD</dispatcher>
     <dispatcher>REQUEST</dispatcher>
   </filter-mapping>
@@ -137,6 +137,10 @@
     <param-name>oracle.adf.view.rich.dvt.DEFAULT_IMAGE_FORMAT</param-name>
     <param-value>HTML5</param-value>
   </context-param>
+  <context-param>
+    <param-name>javax.faces.FACELETS_VIEW_MAPPINGS</param-name>
+    <param-value>*.jsf;*.xhtml</param-value>
+  </context-param>
   <mime-mapping>
     <extension>swf</extension>
     <mime-type>application/x-shockwave-flash</mime-type>
@@ -145,4 +149,13 @@
     <extension>amf</extension>
     <mime-type>application/x-amf</mime-type>
   </mime-mapping>
+  <listener>
+    <listener-class>oracle.adf.mbean.share.connection.ADFConnectionLifeCycleCallBack</listener-class>
+  </listener>
+  <listener>
+    <listener-class>oracle.adf.mbean.share.config.ADFConfigLifeCycleCallBack</listener-class>
+  </listener>
+  <listener>
+    <listener-class>oracle.bc4j.mbean.BC4JConfigLifeCycleCallBack</listener-class>
+  </listener>
 </web-app>
